fixed scrolling on signup form, allowing it to scroll with overflow

--- a/client/src/components/Login/style.css
+++ b/client/src/components/Login/style.css
@@ -1,5 +1,5 @@
 
-.translucent-form-overlay {
+.login-form {
     max-width: 500px;
     width: 100%;
     background-color: rgba(54, 54, 54, 0.8);
@@ -9,27 +9,27 @@
     margin-left: 45px;
 }
   
-.translucent-form-overlay .columns.row {
+.login-form .columns.row {
     display: block;
 }
   
-.translucent-form-overlay h3, .translucent-form-overlay label {
+.login-form h3, .login-form label {
     color: #fefefe;
 }
   
-.translucent-form-overlay input, .translucent-form-overlay select {
+.login-form input, .login-form select {
     color: #8a8a8a;
 }
   
-.translucent-form-overlay input::-webkit-input-placeholder {
+.login-form input::-webkit-input-placeholder {
     color: #8a8a8a;
 }
   
-.translucent-form-overlay input:-ms-input-placeholder {
+.login-form input:-ms-input-placeholder {
     color: #8a8a8a;
 }
   
-.translucent-form-overlay input::placeholder {
+.login-form input::placeholder {
     color: #8a8a8a;
 }
   
